--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medical Landing Page</title>
+  <title>DOK - Medical Landing Page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,15 +12,22 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header id="home">
     <nav>
-      <h2 class="logo">DOK</h2>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Service</a></li>
-        <li><a href="">Team</a></li>
-        <li><a href="">Contact</a></li>
+      <div class="wrapper">
+        <div class="burger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <h2 class="logo">DOK</h2>
+      </div>
+      <ul id="nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Service</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
       <button>Login</button>
     </nav>
@@ -123,8 +130,10 @@
     </div>
   </article>
   <article id="team">
-    <p class="navigasi">team</p>
-    <h2 class="sub-nav">Our Doctors</h2>
+    <div class="wrap">
+      <p class="navigasi">team</p>
+      <h2 class="sub-nav">Our Doctors</h2>
+    </div>
     <div class="team-wrapper">
       <div class="card">
         <img src="img/doctor 1.jpg" alt="">
@@ -160,8 +169,10 @@
     <button>View all</button>
   </article>
   <article id="quote">
-    <p class="navigasi">testimonials</p>
-    <h2 class="sub-nav">What Our Patients Say</h2>
+    <div class="wrap">
+      <p class="navigasi">testimonials</p>
+      <h2 class="sub-nav">What Our Patients Say</h2>
+    </div>
     <div class="quote-wrapper">
       <div class="card">
         <i class="fa-solid fa-quote-left"></i>
@@ -169,7 +180,7 @@
         <div class="profile">
           <img src="img/person1.jpg" alt="">
           <div class="name">
-            <h5>Grace</h5>
+            <h5>Udin</h5>
             <p>Data Analyst</p>
           </div>
         </div>
@@ -180,7 +191,7 @@
         <div class="profile">
           <img src="img/person2.jpg" alt="">
           <div class="name">
-            <h5>Udin</h5>
+            <h5>Grace</h5>
             <p>Security Engineer</p>
           </div>
         </div>
@@ -218,5 +229,6 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
