--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
       <button>Login</button>
     </nav>
     <div class="hero">
-      <h1>Dedication To Health</h1>
-      <p>Our dedication is to provide the best and highest quality health care for your well-being</p>
-      <button>More</button>
+      <img src="img/bg-01.png" alt="">
+      <div class="hero-wrapper">
+        <h1>Dedication To Health</h1>
+        <p>Our dedication is to provide the best and highest quality health care for your well-being</p>
+        <button>More</button>
+      </div>
     </div>
   </header>
   <section>
@@ -87,35 +90,37 @@
     <h2 class="sub-nav">Our Medical Services</h2>
     <div class="services-wrapper">
       <div class="services-card">
-        <div class="card diff">
-          <i class="fa-solid fa-tooth icon"></i>
-          <div class="circle"></div>
-          <p>Dentist</p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-stethoscope icon"></i>
-          <div class="circle"></div>
-          <p>Cardiology</p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-eye icon"></i>
-          <div class="circle"></div>
-          <p>Eye Care</p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-syringe icon"></i>
-          <div class="circle"></div>
-          <p>Pharmacy Care</p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-truck-medical icon"></i>
-          <div class="circle"></div>
-          <p>Orthopedic</p>
-        </div>
-        <div class="card">
-          <i class="fa-solid fa-x-ray icon"></i>
-          <div class="circle"></div>
-          <p>X-ray</p>
+        <div class="cards">
+          <div class="card diff">
+            <i class="fa-solid fa-tooth icon"></i>
+            <div class="circle"></div>
+            <p>Dentist</p>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-stethoscope icon"></i>
+            <div class="circle"></div>
+            <p>Cardiology</p>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-eye icon"></i>
+            <div class="circle"></div>
+            <p>Eye Care</p>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-syringe icon"></i>
+            <div class="circle"></div>
+            <p>Pharmacy Care</p>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-truck-medical icon"></i>
+            <div class="circle"></div>
+            <p>Orthopedic</p>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-x-ray icon"></i>
+            <div class="circle"></div>
+            <p>X-ray</p>
+          </div>
         </div>
       </div>
       <div class="side-card">
@@ -200,12 +205,13 @@
     <button>View all</button>
   </article>
   <article id="contact">
-    <p class="navigasi">contact</p>
-    <h2 class="sub-nav">Keep in Touch</h2>
+    <div class="wrap">
+      <p class="navigasi">contact</p>
+      <h2 class="sub-nav">Keep in Touch</h2>
+    </div>
     <form action="">
       <input type="text" id="name" placeholder="Your name">
       <input type="text" id="email" placeholder="Your email">
-      <!-- <input type="text" id="message" placeholder="Your message"> -->
       <textarea id="message" placeholder="Your message"></textarea>
     </form>
     <button>Submit</button>
