--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </header>
-  <section>
+  <section class="slider">
     <div class="card-container">
       <div class="card">
         <h4>Opening Hours</h4>
