--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOK - Medical Landing Page</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Righteous&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
       <button onclick="login()">Login</button>
     </nav>
     <div class="hero">
-      <img src="../img/bg-01.png" alt="">
+      <img src="img/bg-01.png" alt="">
       <div class="hero-wrapper">
         <h1>Dedication To Health</h1>
         <p>Our dedication is to provide the best and highest quality health care for your well-being</p>
@@ -75,7 +75,7 @@
   </section>
   <article id="about">
     <div class="about-wrapper">
-      <img src="../img/hospital room.jpg" alt="">
+      <img src="img/hospital room.jpg" alt="">
       <div class="about-content">
         <p class="navigasi">about</p>
         <h2>You Always Get Our Helps</h2>
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="side-card">
-        <img src="../img/service.jpg" alt="">
+        <img src="img/service.jpg" alt="">
         <div class="content">
           <h3>Surgical Precision, Healing Excellence</h3>
           <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officia illo nesciunt alias ea pariatur temporibus dolores?</p>
@@ -141,7 +141,7 @@
     </div>
     <div class="team-wrapper">
       <div class="card">
-        <img src="../img/doctor 1.jpg" alt="">
+        <img src="img/doctor 1.jpg" alt="">
         <h5>Tiara</h5>
         <p>Nurse</p>
         <div class="sosmed">
@@ -151,7 +151,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="../img/doctor 2.jpg" alt="">
+        <img src="img/doctor 2.jpg" alt="">
         <h5>Shandy</h5>
         <p>General Practitioner</p>
         <div class="sosmed">
@@ -161,7 +161,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="../img/doctor 3.jpg" alt="">
+        <img src="img/doctor 3.jpg" alt="">
         <h5>Gandul Ganteng</h5>
         <p>Dentist</p>
         <div class="sosmed">
@@ -183,7 +183,7 @@
         <i class="fa-solid fa-quote-left"></i>
         <p class="message">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto tenetur dolor omnis eligendi optio ipsum tempora, dignissimos ratione inventore repellat ab eius id, aut, porro cupiditate atque?</p>
         <div class="profile">
-          <img src="../img/person1.jpg" alt="">
+          <img src="img/person1.jpg" alt="">
           <div class="name">
             <h5>Udin</h5>
             <p>Data Analyst</p>
@@ -194,7 +194,7 @@
         <i class="fa-solid fa-quote-left"></i>
         <p class="message">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto tenetur dolor omnis eligendi optio ipsum tempora, dignissimos ratione inventore repellat ab eius id, aut, porro cupiditate atque?</p>
         <div class="profile">
-          <img src="../img/person2.jpg" alt="">
+          <img src="img/person2.jpg" alt="">
           <div class="name">
             <h5>Grace</h5>
             <p>Security Engineer</p>
@@ -235,6 +235,6 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
