--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
   <div class="container">
@@ -28,7 +28,7 @@
       </div>
     </main>
     <aside>
-      <img src="../img/4957136.jpg" alt="" width="600px">
+      <img src="img/4957136.jpg" alt="" width="600px">
     </aside>
   </div>
 </body>
