--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
   <header id="home">
@@ -40,7 +41,7 @@
       </div>
     </div>
   </header>
-  <section class="slider">
+  <section class="slider main">
     <div class="card-container">
       <div class="card">
         <h4>Opening Hours</h4>
@@ -70,6 +71,55 @@
           <p>Lorem Ipsum is simply</p>
         </div>
         <button>More</button>
+      </div>
+    </div>
+  </section>
+  <section class="mobile">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide card-container">
+        <div class="diff-swiper-card">
+          <div class="card-content">
+            <h4>Opening Hours</h4>
+            <p>Lorem Ipsum is simply dummy text</p>
+            <p>Lorem Ipsum is simply dummy text</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide card-container">
+        <div class="swiper-card">
+          <div class="card-content">
+            <h4>Appoint Ment</h4>
+            <div class="desc">
+              <p>Lorem Ipsum is simply</p>
+              <p>Lorem Ipsum is simply</p>
+            </div>
+            <button>More</button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide card-container">
+        <div class="swiper-card">
+          <div class="card-content">
+            <h4>Appoint Ment</h4>
+            <div class="desc">
+              <p>Lorem Ipsum is simply</p>
+              <p>Lorem Ipsum is simply</p>
+            </div>
+            <button>More</button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide card-container">
+        <div class="swiper-card">
+          <div class="card-content">
+            <h4>Appoint Ment</h4>
+            <div class="desc">
+              <p>Lorem Ipsum is simply</p>
+              <p>Lorem Ipsum is simply</p>
+            </div>
+            <button>More</button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -236,5 +286,30 @@
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    var swiper = new Swiper(".mobile", {
+      slidesPerView: 1,
+      spaceBetween: 10,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      breakpoints: {
+        640: {
+          slidesPerView: 2,
+          spaceBetween: 20,
+        },
+        768: {
+          slidesPerView: 4,
+          spaceBetween: 40,
+        },
+        1024: {
+          slidesPerView: 5,
+          spaceBetween: 50,
+        },
+      },
+    });
+  </script>
 </body>
 </html>
