--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
       </div>
     </main>
     <aside>
-      <img src="img/4957136.jpg" alt="" width="600px">
+      <img src="img/4957136.jpg" alt="">
     </aside>
   </div>
 </body>
