--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="swiper-slide card-container">
         <div class="swiper-card">
           <div class="card-content">
-            <h4>Appoint Ment</h4>
+            <h4>Find Doctors-</h4>
             <div class="desc">
               <p>Lorem Ipsum is simply</p>
               <p>Lorem Ipsum is simply</p>
@@ -112,7 +112,7 @@
       <div class="swiper-slide card-container">
         <div class="swiper-card">
           <div class="card-content">
-            <h4>Appoint Ment</h4>
+            <h4>Find Locations</h4>
             <div class="desc">
               <p>Lorem Ipsum is simply</p>
               <p>Lorem Ipsum is simply</p>
